@@ -2747,6 +2747,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\NEWS"
+				>
+			</File>
+			<File
 				RelativePath="..\..\README.unix"
 				>
 			</File>
